--- a/style.css
+++ b/style.css
@@ -136,7 +136,6 @@
 .homes{
     display: flex;
     margin-top: 3rem;
-    border: 2px red solid;
     width: 100%;
 }
 .homes_title{
@@ -152,4 +151,44 @@
 .homes_title p {
     font-family: "Dancing Script ", cursive;
     line-height: 1rem;
+}
+.rooms{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: #B4C5DB;
+}
+.rooms_details{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 40rem;
+    margin: 2rem;
+    gap: 4rem;
+}
+.rooms_content{
+    width: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 4px;
+}
+.rooms_content img{
+    width: 100%;
+    height: 12rem;
+    border-radius: 15px;
+    box-shadow: 5px 10px #888888;
+}
+.rooms_content h2{
+    font-family: "Dancing Script", cursive;
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+.rooms_content p{
+    margin-top: .5rem;
+    text-align: center;
+    font-family:'Trebuchet MS', sans-serif;
+    letter-spacing: 1px;
 }
