--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #728495;
+}
 .navbar{
     width: 100%;
     display: flex;
@@ -22,8 +25,9 @@
     margin-bottom: .5rem;
 } 
 .nav_icon img{
+    margin-top: 2px;
     width: 7rem;
-    height: 7rem;
+    height: 5rem;
     border-radius: 50%;
 }
 .nav_text{
@@ -64,10 +68,50 @@
     font-family: "Poppins",sans-serif;
     font-size: 4rem;
 }
-.search{
-    display: flex;
-    justify-content: center;
-}
+.input-container {
+    width: 220px;
+    position: relative;
+    margin: auto;
+  }
+  
+  .icon {
+    position: absolute;
+    right: 10px;
+    top: calc(50% + 5px);
+    transform: translateY(calc(-50% - 5px));
+  }
+  
+  .input {
+    width: 100%;
+    height: 40px;
+    padding: 10px;
+    transition: .2s linear;
+    border: 2.5px solid black;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+  
+  .input:focus {
+    outline: none;
+    border: 0.5px solid black;
+    box-shadow: -5px -5px 0px black;
+  }
+  
+  .input-container:hover > .icon {
+    animation: anim 1s linear infinite;
+  }
+  
+  @keyframes anim {
+    0%,
+    100% {
+      transform: translateY(calc(-50% - 5px)) scale(1);
+    }
+  
+    50% {
+      transform: translateY(calc(-50% - 5px)) scale(1.1);
+    }
+  }
 .hero_content input{
     width: 20rem;
     height: 2rem;
@@ -86,7 +130,6 @@
 }
 .amenities{ 
     width: 100%;
-    background-color: #728495;
     border-radius: 10px;
 }
 
@@ -102,14 +145,15 @@
 .amenities_details{
     display: flex;
     justify-content: center;
-    gap: 5rem;
+    gap: 6rem;
     flex-wrap: wrap;
 }
 .amenities_content{
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 20rem;
+    width: 15rem;
     height: 30vh;
     background-color: azure;
     border-radius: 2rem;
@@ -156,7 +200,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #B4C5DB;
 }
 .rooms_details{
     display: flex;
@@ -166,6 +209,7 @@
     width: 40rem;
     margin: 2rem;
     gap: 4rem;
+    background-color: #B4C5DB;
 }
 .rooms_content{
     width: 15rem;
@@ -192,3 +236,409 @@
     font-family:'Trebuchet MS', sans-serif;
     letter-spacing: 1px;
 }
+.about{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-image:  linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)) ,url(./assets/about.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    gap: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.about_content{
+    display: flex;
+    gap: 2rem;
+}
+.about_content p{
+   color: #B4C5DB;
+   font-size: 1.2rem; 
+   line-height: 1.5rem;
+   width: 30rem;
+   font-family: "Poppins" , sans-serif;
+}
+.about_image img{
+    width: 25rem;
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px #ece6e6;
+}
+.about_heading h1{
+    color: #ece6e6;
+    font-size: 4rem;
+}
+.contacts{
+    display: flex;
+    justify-content: center;
+
+}
+.container{
+  width: 80%;
+  background: #fff;
+  border-radius: 6px;
+  padding: 20px 60px 30px 40px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.container .content{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.container .content .left-side{
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+  position: relative;
+}
+.content .left-side::before{
+  content: '';
+  position: absolute;
+  height: 70%;
+  width: 2px;
+  right: -15px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #afafb6;
+}
+.content .left-side .details{
+  margin: 14px;
+  text-align: center;
+}
+.content .left-side .details i{
+  font-size: 30px;
+  color: #3e2093;
+  margin-bottom: 10px;
+}
+.content .left-side .details .topic{
+  font-size: 18px;
+  font-weight: 500;
+}
+.content .left-side .details .text-one,
+.content .left-side .details {
+  font-size: 14px;
+  color: #afafb6;
+}
+.container .content .right-side{
+  width: 75%;
+  margin-left: 75px;
+}
+.content .right-side .topic-text{
+  font-size: 23px;
+  font-weight: 600;
+  color: #3e2093;
+}
+.right-side .input-box{
+  height: 50px;
+  width: 100%;
+  margin: 12px 0;
+}
+.right-side .input-box input,
+.right-side .input-box textarea{
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  background: #F0F1F8;
+  border-radius: 6px;
+  padding: 0 15px;
+  resize: none;
+}
+.right-side .message-box{
+  min-height: 110px;
+}
+.right-side .input-box textarea{
+  padding-top: 6px;
+}
+.right-side .button{
+  display: inline-block;
+  margin-top: 12px;
+}
+.right-side .button input[type="button"]{
+  color: #fff;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 6px;
+  background: #3e2093;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.button input[type="button"]:hover{
+  background: #5029bc;
+}
+.footer {
+    background-color: #414141;
+    width: 100%;
+    text-align: left;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 50px;
+    margin-top: 50px;
+  }
+  
+  .footer .footer-left,
+  .footer .footer-center,
+  .footer .footer-right {
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  
+
+  
+  .footer .footer-left {
+    width: 33%;
+    padding-right: 15px;
+  }
+  
+  .footer .footer_about {
+    line-height: 20px;
+    color: #ffffff;
+    font-size: 13px;
+    font-weight: normal;
+    margin: 0;
+  }
+  
+  .footer .footer_about span {
+    display: block;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  
+  .footer .icons {
+    margin-top: 25px;
+  }
+  
+  .footer .icons a {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    background-color: #33383b;
+    border-radius: 2px;
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 35px;
+    margin-right: 3px;
+    margin-bottom: 5px;
+  }
+  
+  
+  .footer .footer-center {
+    width: 30%;
+  }
+  
+  .footer .footer-center i {
+    background-color: #33383b;
+    color: #ffffff;
+    font-size: 25px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin: 10px 15px;
+    vertical-align: middle;
+  }
+  
+  .footer .footer-center i.fa-envelope {
+    font-size: 17px;
+    line-height: 38px;
+  }
+  
+  .footer .footer-center p {
+    display: inline-block;
+    color: #ffffff;
+    vertical-align: middle;
+    margin: 0;
+  }
+  
+  .footer .footer-center p span {
+    display: block;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+  }
+  
+  .footer .footer-center p a {
+    color: #0099ff;
+    text-decoration: none;
+  }
+  
+  
+  .footer .footer-right {
+    width: 35%;
+  }
+  
+  .footer h2 {
+    color: #ffffff;
+    font-size: 36px;
+    font-weight: normal;
+    margin: 0;
+  }
+  
+  .footer h2 span {
+    color: #0099ff;
+  }
+  
+  .footer .menu {
+    color: #ffffff;
+    margin: 20px 0 12px;
+    padding: 0;
+  }
+  
+  .footer .menu a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .footer .menu a:hover {
+    color: #0099ff;
+  }
+  
+  .footer .name {
+    color: #0099ff;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+  }
+  
+  @media  screen and (max-width:600px){
+
+    body{
+        overflow-x: hidden;
+    }
+    .navbar{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        margin: 0;
+        width: 100;
+        border: 2px red solid;
+    }
+    .nav_text{
+        display: flex;
+        flex-direction: column;
+        font-size: 1rem;
+    }
+    .nav_icon{
+        width: 2rem;
+        color: #5029bc;
+    }
+    .nav_links{
+        gap: 0.5rem;
+        border: 2px red solid;
+        margin: 0;
+    }
+    .hero{
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+    }
+    .hero_content h1{
+        font-size: 1.5rem;
+    }
+    .amenities_title{
+        margin-bottom: 2rem;
+    }
+    .amenities_title h1{
+        font-size: 3rem;
+        
+    }
+    .input-container{
+       display: flex;
+       justify-content: center;
+       align-items: center;
+    }
+    .about{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        gap: 1rem;
+    }
+    .about_content{
+        display: flex;
+        flex-direction: column;
+        margin-left: 1rem;
+    }
+    .about_content p{
+        font-size: 1rem;
+        line-height: 1.5rem;
+        width: 100%;
+    }
+    .about_image{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+    .about_image img{
+        width: 15rem;
+    }
+    .contacts{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin: auto;
+    }
+    .container{
+        width: 90%;
+        padding: 30px 40px 40px 35px ;
+      }
+      .container .content .right-side{
+       width: 75%;
+       margin-left: 55px;
+    }
+    }
+    @media (max-width: 820px) {
+      .container{
+        margin: 40px 0;
+        height: 100%;
+      }
+      .container .content{
+        flex-direction: column-reverse;
+      }
+     .container .content .left-side{
+       width: 100%;
+       flex-direction: row;
+       margin-top: 40px;
+       justify-content: center;
+       flex-wrap: wrap;
+     }
+     .container .content .left-side::before{
+       display: none;
+     }
+     .container .content .right-side{
+       width: 100%;
+       margin-left: 0;
+     }
+    .footer {
+        font-size: 14px;
+      }
+      .footer .footer-left,
+      .footer .footer-center,
+      .footer .footer-right {
+        display: block;
+        width: 100%;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      .footer .footer-center i {
+        margin-left: 0;
+      }
+  }
