--- a/style.css
+++ b/style.css
@@ -517,7 +517,7 @@ body{
     margin: 0;
   }
   
-  @media  screen and (max-width:600px){
+  @media  screen and (max-width:900px){
 
     body{
         overflow-x: hidden;
@@ -604,6 +604,14 @@ body{
     }
     }
     @media (max-width: 820px) {
+        .hero{
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+        }
+        .hero_content h1{
+            font-size: 1.5rem;
+        }
       .container{
         margin: 40px 0;
         height: 100%;
