--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     position: fixed;
     z-index: 100;
     background-color: aliceblue;
+    border-bottom: 2px  #33383b solid;
 }
 
 .nav_icon{
@@ -516,6 +517,20 @@ body{
     font-weight: normal;
     margin: 0;
   }
+
+  @media  screen and (max-width:600px) {
+    .amenities_content h2{
+      font-size: 1.5rem;
+    }
+    .amenities_content p{
+      font-size: 1rem;
+    }
+    .nav_text{
+      display: flex;
+      flex-direction: column;
+      font-size: 1rem;
+  }
+  }
   
   @media  screen and (max-width:900px){
 
@@ -529,14 +544,16 @@ body{
         margin: 0;
         width: 100;
     }
+    .nav_icon{
+        display: flex;
+        justify-content: center;
+        gap: .5rem;
+        margin-bottom: .5rem;
+    }
     .nav_text{
         display: flex;
         flex-direction: column;
         font-size: 1rem;
-    }
-    .nav_icon{
-        width: 2rem;
-        color: #5029bc;
     }
     .nav_links{
         gap: 0.5rem;
