--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ body{
 }
 .amenities_content h2{
     font-size: 1.5rem;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue;
 
 }
 .amenities_content img{
@@ -226,6 +226,14 @@ body{
     height: 12rem;
     border-radius: 15px;
     box-shadow: 5px 10px #888888;
+    
+}
+.rooms_content:hover img{
+   cursor: pointer;
+    transition:  0.5s ease-in-out;
+    overflow: hidden;
+    transform: scale(1.1);
+  
 }
 .rooms_content h2{
     font-family: "Dancing Script", cursive;
